syntax = "proto3";
package CreateShortToken;
option go_package = ".";
service CreateToken {
  rpc createToken(CreateTokenRequest) returns (CreateTokenResponse) {}
}
message CreateTokenRequest {
  string username = 1;
  string key = 2;
  string longToken = 3;
}
message CreateTokenResponse {
  string token = 1;
}